--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+BROWSER=none
 REACT_APP_API_KEY=AIzaSyCT1B73HYmYYDlu_zPKwA974fb5cv3wHGY
 REACT_APP_AUTH_DOMAIN=ecommerce-a4f44.firebaseapp.com
 REACT_APP_DATABASE_URL=https://ecommerce-a4f44-default-rtdb.firebaseio.com
