--- a/package.json
+++ b/package.json
@@ -1,50 +1,50 @@
 {
-  "name": "bashirr-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^2.1.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "aos": "^2.3.4",
-    "firebase": "^10.7.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.3",
-    "react-scripts": "5.0.1",
-    "redux-persist": "^6.0.0",
-    "swiper": "^11.0.5",
-    "use-react-router-breadcrumbs": "^4.0.1",
-    "web-vitals": "^2.1.4",
-    "yarn": "^1.22.21"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "set \\\"GENERATE_SOURCEMAP=false\\\" &&  react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "bashirr-app",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@reduxjs/toolkit": "^2.1.0",
+		"@testing-library/jest-dom": "^5.17.0",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"aos": "^2.3.4",
+		"firebase": "^10.7.2",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-helmet": "^6.1.0",
+		"react-hot-toast": "^2.4.1",
+		"react-icons": "^5.0.1",
+		"react-redux": "^9.1.0",
+		"react-router-dom": "^6.21.3",
+		"react-scripts": "5.0.1",
+		"redux-persist": "^6.0.0",
+		"swiper": "^11.0.5",
+		"use-react-router-breadcrumbs": "^4.0.1",
+		"web-vitals": "^2.1.4",
+		"yarn": "^1.22.21"
+	},
+	"scripts": {
+		"start": "set \\\"GENERATE_SOURCEMAP=false\\\" && react-scripts start",
+		"build": "set \\\"GENERATE_SOURCEMAP=false\\\" && react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
