--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 		"yarn": "^1.22.21"
 	},
 	"scripts": {
-		"start": "set \\\"GENERATE_SOURCEMAP=false\\\" && react-scripts start",
-		"build": "set \\\"GENERATE_SOURCEMAP=false\\\" && react-scripts build",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
